used the builder.Configuration insted of getting the configuraiont myself

--- a/BookStoreApi/appsettings.json
+++ b/BookStoreApi/appsettings.json
@@ -6,5 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-  "dbConnectionUrl":"Server=localhost;Port=5432;User Id=zildeus;Password=password;Database=book_store_db",
+  "ConnectionStrings":
+  {
+    "postgres":"Server=localhost;Port=5432;User Id=zildeus;Password=password;Database=book_store_db",
+  },
+  "Jwt":{
+    "Key":"YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3",
+    "Issuer":"https://localhost:5243",
+    "Audience":"https://localhost:5243",
+  }
 }
