--- a/BookStoreApi/appsettings.json
+++ b/BookStoreApi/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings":
   {
     "postgres":"Server=localhost;Port=5432;User Id=zildeus;Password=password;Database=book_store_db",
+    "sqlite":"Data Source=Application.db",
   },
   "Jwt":{
     "Key":"YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3",
