added role based jwt authentication

--- a/BookStoreApi/appsettings.json
+++ b/BookStoreApi/appsettings.json
@@ -6,5 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "dbConnectionUrl":"Server=localhost;Port=5432;User Id=zildeus;Password=password;Database=book_store_db",
+  "ConnectionStrings":
+  {
+    "sqlite":"Data Source=Application.db",
+    "postgres":"Server=localhost;Port=5432;User Id=zildeus;Password=password;Database=book_store_db",
+  },
+  "Jwt": {
+    "Issuer": "https://zildeus.org",
+    "Audience": "https://zildeus.org",
+    "Key": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  }
 }
