--- a/BookStoreApi/BookStoreApi.csproj
+++ b/BookStoreApi/BookStoreApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.EF6" Version="3.0.0" />
+    <PackageReference Include="Bogus" Version="35.5.1" />
     <PackageReference Include="ErrorOr" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.5" />
