fixed docker files

--- a/BookStoreApi/appsettings.json
+++ b/BookStoreApi/appsettings.json
@@ -11,6 +11,13 @@
     "sqlite":"Data Source=Application.db",
     "postgres":"Server=localhost;Port=5432;User Id=zildeus;Password=password;Database=book_store_db",
   },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://158.220.126.158:5000"
+      }
+    }
+  },
   "Jwt": {
     "Issuer": "https://zildeus.org",
     "Audience": "https://zildeus.org",
